# CNN-Fashion-MNIST

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cnnFashionMnist/: __init__.py  config.py  dataset.py  features.py  plots.py
cnnFashionMnist/modeling/: losses.py  model.py  predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: fashion_mnist_demo.ipynb
tests/: test_data.py
