[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cnnFashionMnist"
version = "0.0.1"
description = "CNN Project for the Fashion MNIST Dataset"
authors = [
  { name = "David" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10,<3.13"     # allows 3.10 and 3.11


[tool.ruff]
line-length = 99
src = ["cnnFashionMnist"]
include = ["pyproject.toml", "cnnFashionMnist/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cnnFashionMnist"]
force-sort-within-sections = true

